Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/IB_Asset__c.object-meta.xml
<CustomObject>
    <label>IB Asset</label>
    <nameField>
        <displayFormat>IBA-{000000}</displayFormat>
        <label>IB Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IB Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>