Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Account_Zone__c.field-meta.xml
<CustomField>
    <fullName>Account_Zone__c</fullName>
    <formula>TEXT( Account__r.Zone__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Zone</label>
    <type>Text</type>
</CustomField>