Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Age_Years__c.field-meta.xml
<CustomField>
    <fullName>Age_Years__c</fullName>
    <formula>IF(ISPICKVAL(Country__c, &quot;Japan&quot;), YEAR(TODAY()) - VALUE( LEFT( Japan_InstallDate__c, 4)), (TODAY() - Install_Date__c) / 365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>