Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Asset Number</label>
    <type>AutoNumber</type>
</CustomField>