Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Care_Area__c.field-meta.xml
<CustomField>
    <fullName>Care_Area__c</fullName>
    <label>Care Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Biomed</fullName>
            </value>
            <value>
                <fullName>ED</fullName>
            </value>
            <value>
                <fullName>Endoscopy</fullName>
            </value>
            <value>
                <fullName>ER</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Home Healthcare</fullName>
            </value>
            <value>
                <fullName>ICU</fullName>
            </value>
            <value>
                <fullName>Imaging</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>NICU</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>Orthopedics</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Physician Office</fullName>
            </value>
            <value>
                <fullName>Radiology</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>U/S – Assisted Reproductive Medicine</fullName>
            </value>
            <value>
                <fullName>U/S – Labor &amp; Delivery</fullName>
            </value>
            <value>
                <fullName>U/S – MFM/Perinatology</fullName>
            </value>
            <value>
                <fullName>U/S - Urogynecology</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
            <value>
                <fullName>Women&apos;s Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>