Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Check_Digit__c.field-meta.xml
<CustomField>
    <fullName>Check_Digit__c</fullName>
    <formula>10 - MOD((VALUE(LEFT(Asset_Number__c,1)) * 1594323) +
(VALUE(MID(Asset_Number__c,2,1)) * 531441) +
(VALUE(MID(Asset_Number__c,3,1)) * 177147) +
(VALUE(MID(Asset_Number__c,4,1)) * 59049) +
(VALUE(MID(Asset_Number__c,5,1)) * 19683) +
(VALUE(MID(Asset_Number__c,6,1)) * 6561) +
(VALUE(LEFT(Asset_Number__c,1)) * 2187) +
(VALUE(MID(Asset_Number__c,2,1)) * 729) +
(VALUE(MID(Asset_Number__c,3,1)) * 243) +
(VALUE(MID(Asset_Number__c,4,1)) * 81) +
(VALUE(MID(Asset_Number__c,5,1)) * 27) +
(VALUE(MID(Asset_Number__c,6,1)) * 9) +
(VALUE(MID(Asset_Number__c,7,1)) * 3),11)</formula>
    <label>Check Digit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>