Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>Installation City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>