Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Commercial_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Product_Name__c</fullName>
    <formula>IB_Products_Country_Attributes__r.IB_Product__r.Commercial_Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial Product Name</label>
    <type>Text</type>
</CustomField>