Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Equipment_Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Sales_Owner__c</fullName>
    <label>Equipment Sales Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>