Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/EquipmentSalesOwner__c.field-meta.xml
<CustomField>
    <fullName>EquipmentSalesOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EquipmentSalesOwner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IB_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>