Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/GIB_De_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>GIB_De_Install_Date__c</fullName>
    <label>GIB De-Install Date</label>
    <type>Date</type>
</CustomField>