Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/IB_Asset_Owner__c.field-meta.xml
<CustomField>
    <fullName>IB_Asset_Owner__c</fullName>
    <formula>IF(TEXT( IB_Products_Country_Attributes__r.IB_Product__r.Manufacturer_Type__c )=&quot;GE&quot;, &quot;GE&quot;, IB_Products_Country_Attributes__r.IB_Product__r.Competitor__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer Name</label>
    <type>Text</type>
</CustomField>