Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/IB_Product__c.field-meta.xml
<CustomField>
    <fullName>IB_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IB Product</label>
    <referenceTo>IB_Product__c</referenceTo>
    <relationshipLabel>IB Assets</relationshipLabel>
    <relationshipName>IB_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>