Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/IB_Products_Country_Attributes__c.field-meta.xml
<CustomField>
    <fullName>IB_Products_Country_Attributes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IB Products Country Attributes</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>IB_Products_Subregions_Mapping__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>IB_Products_Subregions_Mapping__c.Country__c</field>
            <operation>equals</operation>
            <valueField>$Source.Country__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>IB_Products_Subregions_Mapping__c</referenceTo>
    <relationshipLabel>IB Assets</relationshipLabel>
    <relationshipName>IB_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>