Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/IB_Region__c.field-meta.xml
<CustomField>
    <fullName>IB_Region__c</fullName>
    <formula>TEXT( IB_Products_Country_Attributes__r.Global_Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Region</label>
    <type>Text</type>
</CustomField>