Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Installation_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Installation_State_Province__c</fullName>
    <label>Installation State/Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>