Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Installation_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Installation_Zip_Postal_Code__c</fullName>
    <label>Installation Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>