Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Japan_InstallDate__c.field-meta.xml
<CustomField>
    <fullName>Japan_InstallDate__c</fullName>
    <label>Installation Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>