Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Lifecycle_Duration__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Duration__c</fullName>
    <formula>IB_Products_Country_Attributes__r.Lifecycle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifecycle Duration</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>