Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Renewal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Amount__c</fullName>
    <label>Renewal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>