Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Service_Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Service_Sales_Owner__c</fullName>
    <label>Service Sales Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>