Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/ServiceSalesOwner__c.field-meta.xml
<CustomField>
    <fullName>ServiceSalesOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ServiceSalesOwner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IB_Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>