Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/SiteID__c.field-meta.xml
<CustomField>
    <fullName>SiteID__c</fullName>
    <label>SiteID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>