Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Sitename__c.field-meta.xml
<CustomField>
    <fullName>Sitename__c</fullName>
    <label>Sitename</label>
    <length>50</length>
    <type>Text</type>
</CustomField>