Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>IB_Source__c</referenceTo>
    <relationshipLabel>IB Assets</relationshipLabel>
    <relationshipName>IB_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>