Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <formula>TEXT( IB_Products_Country_Attributes__r.Sub_Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-Region</label>
    <type>Text</type>
</CustomField>