Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Tier_3_P_L__c.field-meta.xml
<CustomField>
    <fullName>Tier_3_P_L__c</fullName>
    <formula>TEXT( IB_Products_Country_Attributes__r.IB_Product__r.Tier_3_P_L__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier 3 P&amp;L</label>
    <type>Text</type>
</CustomField>