Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Tier_4__c.field-meta.xml
<CustomField>
    <fullName>Tier_4__c</fullName>
    <formula>IB_Products_Country_Attributes__r.Tier_4_P_L__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier 4</label>
    <type>Text</type>
</CustomField>