Reetan.Nayak Dev 25/force-app/main/default/objects/IB_Asset__c/fields/Tier_5__c.field-meta.xml
<CustomField>
    <fullName>Tier_5__c</fullName>
    <formula>IB_Products_Country_Attributes__r.Tier_5_P_L__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier 5</label>
    <type>Text</type>
</CustomField>